# docker-mastery

./: README.md
docker_basics/: README.md
docker_basics/sample_fast_api_app/: Dockerfile  README.md  main.py  pyproject.toml
docker_compose/: README.md  fast-api-postgres.yml
docker_compose/fast-api-app/: Dockerfile  main.py  pyproject.toml
docker_compose/fast-api-app/core/: config.py
docker_compose/fast-api-app/db/: db.py
docker_compose/fast-api-app/models/: models.py
docker_compose/fast-api-app/schema/: schema.py
docker_entrypoint/: README.md
docker_volumes/: README.md  index.html
